--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <div class="section-gauche">
         <div class="block1">
           <div class="nom">
-            <ul>              
+            <ul>
               <li class="up"><p>ROMA Maxime</p></li>
               <li><p><i class="fa fa-child" aria-hidden="true"></i> 23 ans</p></li>
               <li><p><i class="fa fa-car" aria-hidden="true"></i> Permis B et voiture</p></li>
             </ul>
-          </div>          
+          </div>
         </div>
         <div class="block2">
           <div class="image">
@@ -38,7 +38,7 @@
       <div class="section-droite">
         <div class="titre">
           <h1 class="text-color2">Développeur Junior : Web/Mobile</h1>
-          <p>Je suis jeune, motivé et curieux. Je souhaite m'améliorer au quotidien et vous apporter une plus value.</p> 
+          <p>Je suis jeune, motivé et curieux. Je souhaite m'améliorer au quotidien et vous apporter une plus value.</p>
         </div>
         <div class="competence">
           <div class="section-titre">
@@ -73,6 +73,19 @@
             <ul class="items">
               <li class="item">
                 <div class="item-content">
+                  <p class="text-color hover"><i class="fa fa-gitlab" aria-hidden="true"></i> Développement de composants back-office/client pour la startup Staffman</a>
+                    <p>J'ai développé la gestion des préférences utilisateurs et l'administration de bases de données pour les administrateurs.</p>
+                    <ul class="list-tag">
+                      <li><i class="fa fa-tag" aria-hidden="true"></i> React.js</li>
+                      <li><i class="fa fa-tag" aria-hidden="true"></i> Semantic-ui-react</li>
+                      <li><i class="fa fa-tag" aria-hidden="true"></i> Meteor.js</li>
+                      <li><i class="fa fa-tag" aria-hidden="true"></i> Blaze.js</li>
+                      <li><i class="fa fa-tag" aria-hidden="true"></i> MongoDB</li>
+                    </ul>
+                  </div>
+                </li>
+              <li class="item">
+                <div class="item-content">
                   <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/projet-p-dago-AG2I"><i class="fa fa-github text-color" aria-hidden="true"></i> Site statique pour un événement</a>
                   <p>Mes premiers pas dans le développement web pour consolider les bases de mon apprentissage.</p>
                   <ul class="list-tag">
@@ -83,7 +96,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="item">
+              <!-- <li class="item">
                 <div class="item-content">
                   <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/todolist-react"><i class="fa fa-github" aria-hidden="true"></i> ToDoList</a>
                   <p>C'est un gestionnaire de tâches. Voir l'autre version : <a target="_blank" href="https://github.com/maximeroma/todolist-laravel">ToDoList en laravel</a></p>
@@ -94,11 +107,11 @@
                     <li><i class="fa fa-tag" aria-hidden="true"></i> ES6</li>
                   </ul>
                 </div>
-              </li>                
+              </li>                 -->
               <li class="item">
                 <div class="item-content">
                   <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/urhaj"><i class="fa fa-github" aria-hidden="true"></i> Plateforme de logement pour les jeunes</a>
-                  <p>J'ai démarché le projet en parlant de ma formation avec l'URHAJ (Le Noctile). L'apprentissage de Wordpress a été bénéfique. 
+                  <p>J'ai démarché le projet en parlant de ma formation avec l'URHAJ (Le Noctile). L'apprentissage de Wordpress a été bénéfique.
                   <ul class="list-tag">
                     <li><i class="fa fa-tag" aria-hidden="true"></i> Gestion de projet</li>
                     <li><i class="fa fa-tag" aria-hidden="true"></i> PHP/Wordpress</li>
@@ -106,7 +119,7 @@
                     <li><i class="fa fa-tag" aria-hidden="true"></i> Scrumaster</li>
                   </ul>
                 </div>
-              </li>                          
+              </li>
               <li class="item">
                 <div class="item-content">
                     <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/Adopte-ma-tomate"><i class="fa fa-github" aria-hidden="true"></i> Adopte ma tomate</a>
@@ -119,7 +132,7 @@
                       <li><i class="fa fa-tag" aria-hidden="true"></i> Découverte</li>
                     </ul>
                 </div>
-              </li>       
+              </li>
             </ul>
           </div>
         </div>
@@ -142,6 +155,8 @@
           </div>
           <div class="">
             <ul>
+              <li class="text-color"><span>Novembre 2017 à aujourd'hui : </span>Stage en développement web</li>
+              <li class="tag">2,5 mois de découvertes et d'apprentissages au sein de l'accélérateur NUMA et l'incubateur Midi-Pyrénée avec l'équipe Staffman.</li>
               <li class="text-color"><span>Mars 2017 à aujourd'hui : </span>Projets pédagogiques , travaux pratiques et hackathons</li>
               <li class="tag">Réalisation de projet client dans le cadre de la formation Développeur Web / Mobile</li>
               <li class="text-color"><span>Septembre 2015 à Novembre 2016 :</span> Opérateur de production en produit pharmaceutique</li>
