--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
 
               <ul>
                 <li><h2 class="text-color2">Langages</h2></li>
-                <li><span class="text-color">HTML/CSS </span><span class="liste">Bootstrap, Semantic UI, Sass</span></li>
-                <li><span class="text-color">Javascript </span><span class="liste">Node.js, Express.js, JQuery, Pug </span></li>
+                <li><span class="text-color">HTML/CSS </span><span class="liste">Bootstrap, Semantic UI, Sass, Material-UI</span></li>
+                <li><span class="text-color">Javascript </span><span class="liste">Node.js, Express.js, React, Meteor </span></li>
                 <li><span class="text-color">PHP </span><span class="liste">Laravel, Blade, Wordpress</span></li>
-                <li><span class="text-color">MySQL </span><span class="liste">phpmyadmin, PDO</span></li>
+                <li><span class="text-color">DB </span><span class="liste">MySQL, MongoDB, phpmyadmin, PDO, Robomongo</span></li>
               </ul>
             </div>
             <div class="section2">
               <ul>
                 <li><h2 class="text-color2">Outils</h2></li>
-                <li><span class="text-color">Versionning </span><span class="liste">Git, Github, Gitlab</span></li>
-                <li><span class="text-color">Gestion de projet </span><span class="liste">Kanban, Pomodoro, Agilité, Mind Mapping</span></li>
+                <li><span class="text-color">Versionning </span><span class="liste">Git, Github, Gitlab, Gogs, Gitkraken</span></li>
+                <li><span class="text-color">Gestion de projet </span><span class="liste">Kanban, Agilité</span></li>
                 <li><span class="text-color">Environnement de travail </span><span class="liste">Linux (Ubuntu, Deepin) , IDE (VSC, Atom)</span></li>
               </ul>
             </div>
@@ -72,6 +72,19 @@
           <div>
             <ul class="items">
               <li class="item">
+                  <div class="item-content">
+                    <p class="text-color hover"><i class="fa fa-gitlab" aria-hidden="true"></i> Développement application web et mobile</a>
+                      <p>Nous développons la v1 en ce moment.</p>
+                      <ul class="list-tag">
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> React.js</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Material-UI</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Meteor.js</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Cordova</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> MongoDB</li>
+                      </ul>
+                    </div>
+                  </li>
+              <li class="item">
                 <div class="item-content">
                   <p class="text-color hover"><i class="fa fa-gitlab" aria-hidden="true"></i> Développement de composants back-office/client pour la startup Staffman</a>
                     <p>J'ai développé la gestion des préférences utilisateurs et l'administration de bases de données pour les administrateurs.</p>
@@ -82,6 +95,19 @@
                       <li><i class="fa fa-tag" aria-hidden="true"></i> Blaze.js</li>
                       <li><i class="fa fa-tag" aria-hidden="true"></i> MongoDB</li>
                     </ul>
+                  </div>
+                </li>
+                <li class="item">
+                  <div class="item-content">
+                      <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/Adopte-ma-tomate"><i class="fa fa-github" aria-hidden="true"></i> Adopte ma tomate</a>
+                      <p>2ème lauréat de <a target="_blank" href="https://twitter.com/search?q=%23Womixcity">Wo'Mixcity #1 </a>, marathon de l’innovation en équipe.</p>
+                      <ul class="list-tag">
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Hackathon</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Travail d'équipe</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Wo'Mixcity</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Lauréat</li>
+                        <li><i class="fa fa-tag" aria-hidden="true"></i> Découverte</li>
+                      </ul>
                   </div>
                 </li>
               <li class="item">
@@ -120,19 +146,6 @@
                   </ul>
                 </div>
               </li>
-              <li class="item">
-                <div class="item-content">
-                    <a class="text-color hover" target="_blank" href="https://github.com/maximeroma/Adopte-ma-tomate"><i class="fa fa-github" aria-hidden="true"></i> Adopte ma tomate</a>
-                    <p>2ème lauréat de <a target="_blank" href="https://twitter.com/search?q=%23Womixcity">Wo'Mixcity #1 </a>, marathon de l’innovation en équipe.</p>
-                    <ul class="list-tag">
-                      <li><i class="fa fa-tag" aria-hidden="true"></i> Hackathon</li>
-                      <li><i class="fa fa-tag" aria-hidden="true"></i> Travail d'équipe</li>
-                      <li><i class="fa fa-tag" aria-hidden="true"></i> Wo'Mixcity</li>
-                      <li><i class="fa fa-tag" aria-hidden="true"></i> Lauréat</li>
-                      <li><i class="fa fa-tag" aria-hidden="true"></i> Découverte</li>
-                    </ul>
-                </div>
-              </li>
             </ul>
           </div>
         </div>
@@ -142,7 +155,7 @@
           </div>
           <div class="">
             <ul>
-              <li class="text-color">Formation Développeur Junior : Web/Mobile (en cours)</li>
+              <li class="text-color">Formation Développeur Junior : Web/Mobile</li>
               <li class="tag">Ecole Régionale du Numérique - Simplon.co - Promotion 1 - Auch (32000)</li>
               <li class="text-color">Bac S</li>
               <li class="tag">Cité Scolaire d'Artagnan - Spécialité Physique-Chimie - Mention Bien - Nogaro (32110)</li>
@@ -155,7 +168,9 @@
           </div>
           <div class="">
             <ul>
-              <li class="text-color"><span>Novembre 2017 à aujourd'hui : </span>Stage en développement web</li>
+              <li class="text-color"><span>Janvier 2018 à aujourd'hui : </span>Auto-entrepreneur et associé chez Tech Ex Machina</li>
+              <li class="tag">Nous sommes un collectif de freelances passionnés par les nouvelles technologies et la mentalité startup. Notre local se trouve à la Cantine Toulouse </li>
+              <li class="text-color"><span>Novembre 2017 à Janvier 2018 : </span>Stage en développement web</li>
               <li class="tag">2,5 mois de découvertes et d'apprentissages au sein de l'accélérateur NUMA et l'incubateur Midi-Pyrénée avec l'équipe Staffman.</li>
               <li class="text-color"><span>Mars 2017 à aujourd'hui : </span>Projets pédagogiques , travaux pratiques et hackathons</li>
               <li class="tag">Réalisation de projet client dans le cadre de la formation Développeur Web / Mobile</li>
