--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <ul class="items">
               <li class="item">
                   <div class="item-content">
-                    <p class="text-color hover"><i class="fa fa-gitlab" aria-hidden="true"></i> Développement application web et mobile</a>
+                    <p class="text-color hover"><i class="fa fa-gitlab" aria-hidden="true"></i> Développement application web et mobile dans le domaine des objets connectés</a>
                       <p>Nous développons la v1 en ce moment.</p>
                       <ul class="list-tag">
                         <li><i class="fa fa-tag" aria-hidden="true"></i> React.js</li>
@@ -168,7 +168,7 @@
           </div>
           <div class="">
             <ul>
-              <li class="text-color"><span>Janvier 2018 à aujourd'hui : </span>Auto-entrepreneur et associé chez Tech Ex Machina</li>
+              <li class="text-color"><span>Janvier 2018 à aujourd'hui : </span>Freelance et associé chez Tech Ex Machina</li>
               <li class="tag">Nous sommes un collectif de freelances passionnés par les nouvelles technologies et la mentalité startup. Notre local se trouve à la Cantine Toulouse </li>
               <li class="text-color"><span>Novembre 2017 à Janvier 2018 : </span>Stage en développement web</li>
               <li class="tag">2,5 mois de découvertes et d'apprentissages au sein de l'accélérateur NUMA et l'incubateur Midi-Pyrénée avec l'équipe Staffman.</li>
