--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <li class="hover"><i class="fa fa-github" aria-hidden="true"></i> <a target="_blank" href="https://github.com/maximeroma">maximeroma</a></li>
               <li class="hover"><i class="fa fa-linkedin" aria-hidden="true"></i> <a target="_blank" href="https://www.linkedin.com/in/maxime-roma-91b297145/"> maxime-roma</a></li>
               <li class="hover"><a href="mailto:"roma.maxime1994@gmail.com">roma.maxime1994@gmail.com</a></li>
+              <li class="hover">Tel: 06.23.38.37.68</li>
             </ul>
           </div>
         </div>
